Fixed word wrap issues on more links

--- a/src/styles/features/view/toolTip.css
+++ b/src/styles/features/view/toolTip.css
@@ -234,6 +234,7 @@
   text-decoration: underline;
   font-style: italic;
   cursor: pointer;
+  white-space: pre;
 }
 
 
